--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('C://Users//saish//Desktop//MEDIUM//lr//data.csv', index_col=False)"
+    "df = pd.read_csv('C://Users//Tharun//Desktop//MEDIUM///data.csv', index_col=False)"
    ]
   },
   {
@@ -90,7 +90,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       Hours      Marks\n",
+       "    YearsExperience     Salary\n",
        "0  32.502345  31.707006\n",
        "1  53.426804  68.777596\n",
        "2  61.530358  62.562382\n",
